navbar gap fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,10 @@
     padding: 0px;
 }
 
+.one {
+  margin: 0px;
+  padding: 0px;
+}
 body{
     background-image: url("/images/background1.jpeg");
     height: 500px;
